# glfw_opengl_cmake_setip

./: CMakeLists.txt  README.txt  config.bat  glad.c  glad.h  main.cpp  run.bat
libs/glfw/: CMakeLists.txt
